[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [".claude"]

[tool.hatch.build.targets.wheel]
include = ["server.py", "src"]

[project]
name = "advanced-agent"
version = "0.1.1"
description = "MCP server and CLI for researching developer tools using Firecrawl, LangGraph, and Ollama"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Will W", email = "will.wang.016@gmail.com"},
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "langchain>=1.2.13",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.1.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]

[project.scripts]
research-mcp-server = "server:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
